unpackaged/main/default/objects/Bank_Holiday__c/Bank_Holiday__c.object-meta.xml
<CustomObject>
    <label>Bank Holiday</label>
    <nameField>
        <label>Bank Holidays Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Holidays</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>