unpackaged/main/default/objects/Bank_Holiday__c/fields/Loan_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Loan_Start_Date__c</fullName>
    <label>Loan Start Date</label>
    <type>Date</type>
</CustomField>