unpackaged/main/default/objects/Bank_Holiday__c/fields/Observed_Date__c.field-meta.xml
<CustomField>
    <fullName>Observed_Date__c</fullName>
    <label>Observed Date</label>
    <type>Date</type>
</CustomField>